Fix wrapping on scores

--- a/football/base/css/index.css
+++ b/football/base/css/index.css
@@ -5,6 +5,7 @@ li {
 }
 
 .boxScore {
+    white-space: nowrap;
 }
 
 .gameBox {
